--- a/verhaal-detail.html
+++ b/verhaal-detail.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="nl">
+
 <head>
-    <title>Utrecht (U-OV) verhalen | Doof (79)</title>
+    <title>Utrecht (U-OV) verhalen | Martin Bril (20)</title>
     <link rel="stylesheet" href="css/verhaal-detail.css">
+    <link rel="stylesheet" href="css/verhaal-detail-extra.css">
     <link rel="stylesheet" href="css/progress-bar.css">
     <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
@@ -14,49 +16,165 @@
 
 <body>
     <header>
-        <a href="index.html">
-            <img src="img/logo-uov.svg" alt="Utrecht (U-OV) verhalen" title="Utrecht (U-OV) verhalen">
-        </a>
-        <a href="mijn-u-ov-verhalen/inloggen.html">
-            <img src="img/icons/mijn-verhalen.svg" alt="Account en login" title="Account en login">
-        </a>
-        <a href="mijn-u-ov-verhalen/inloggen.html">
-            <img src="img/icons/mijn-u-ov.svg" alt="Account en login" title="Account en login">
-        </a>
+        <ul>
+            <li>
+                <a href="index.html">
+                    <img src="img/logo-uov.svg" alt="Utrecht (U-OV) verhalen" title="Utrecht (U-OV) verhalen">
+                </a>
+            </li>
+            <li>
+                <a href="/mijn-verhalen-leeg.html">
+                    <img src="img/icons/mijn-verhalen.svg" alt="Account en login" title="Account en login">
+                    <span>Mijn verhalen</span>
+                </a>
+            </li>
+            <li>
+                <a href="/inloggen.html">
+                    <img src="img/icons/mijn-u-ov.svg" alt="Account en login" title="Account en login">
+                    <span>Mijn account</span>
+                </a>
+            </li>
+        </ul>
     </header>
 
     <main>
         <article>
             <div>
-                <div>
-                    <a href="index.html">terug</a>
-                    <button><img src="img/icons/voeg-toe.svg" alt=""></button>
-                </div>
-                <h1>Verhaal van de dag</h1>
-                <footer>
-                    <p>31 december 2018</p>
-                    <ul>
-                        <li>12</li>
-                        <li>8</li>
-                    </ul>
-                </footer>
-                <progress value="0" max="100"></progress>
-                <ul id="indicatie">
-                    <li>1</li>
-                    <li>2</li>
-                    <li>3</li>
-                    <li>4</li>
-                </ul>
+                <a href="index.html">terug</a>
+                <button></button>
+                <button></button>
             </div>
-            <img src="img/verhalen/Verhaal-martin%20bril-esmee%20janssen-web%20213.jpg" alt="Verhaal: Doof. Eenzame sfeer" class="verhaal">
+            <div>
+                <section>
+                    <h1>Martin Bril (20)</h1>
+                    <footer>
+                        <span>Esmee Janssen</span>
+                        <div>
+                            <span>30 januari 2019</span>
+                            <span>1:30</span>
+                        </div>
+                        <div>
+                            <span>2</span>
+                            <span>8</span>
+                        </div>
+                    </footer>
+                </section>
+                    <progress value="0" max="100"></progress>
+                    <ul>
+                        <li><a href="#een">1</a></li>
+                        <li><a href="#twee">2</a></li>
+                        <li><a href="#drie">3</a></li>
+                        <li><a href="#vier">4</a></li>
+                    </ul>
+            </div>
+            <img src="img/verhalen/Verhaal-martin%20bril-esmee%20janssen-web%20213.jpg" alt="Verhaal: Doof. Eenzame sfeer">
         </article>
-        <h2>Andere lezen ook</h2>
-        <article>
-            <!-- Hier komt een verhaal -->
-        </article>
+        <section>
+            <section>
+                <h2>Meest gelezen verhalen</h2>
+                <div>
+                    <article>
+                        <a href="verhaal-doof.html">
+                            <img src="img/verhalen/Nichterig_Desktop_Luuk_Arts.jpg" alt="Verhaal: Nichterig. ">
+                            <div>
+                                <h3>Nichterig (34)</h3>
+                                <footer>
+                                    <span>Luuk Arts</span>
+                                    <div>
+                                        <span>30 november 2018</span>
+                                        <span>2:30</span>
+                                    </div>
+                                    <div>
+                                        <span>200</span>
+                                        <span>9121</span>
+                                        <button></button>
+                                        <button></button>
+                                    </div>
+                                </footer>
+                            </div>
+                        </a>
+                    </article>
+                    <article>
+                        <a href="verhaal-doof.html">
+                            <img src="img/verhalen/Interview-(78).jpg" alt="Charlie Sheen van Marilyn Doornoink">
+                            <div>
+                                <h3>Interview (78)</h3>
+                                <footer>
+                                    <span>Jorik van de haan</span>
+                                    <div>
+                                        <span>10 december 2018</span>
+                                        <span>2:30</span>
+                                    </div>
+                                    <div>
+                                        <span>2102</span>
+                                        <span>8000</span>
+                                        <button></button>
+                                        <button></button>
+                                    </div>
+                                </footer>
+                            </div>
+                        </a>
+                    </article>
+                    <article>
+                        <a href="verhaal-doof.html">
+                            <img src="img/verhalen/verhaal.johan.jpg" alt="Verhaal: Johan Cruijff.">
+                            <div>
+                                <h3>Johan Cruijff (44)</h3>
+                                <footer class="verhaal-johan">
+                                    <span>Erik de kamps</span>
+                                    <div>
+                                        <span>8 december 2018</span>
+                                        <span>1:30</span>
+                                    </div>
+                                    <div>
+                                        <span>5004</span>
+                                        <span>6553</span>
+                                        <button></button>
+                                        <button></button>
+                                    </div>
+                                </footer>
+                            </div>
+                        </a>
+                    </article>
+                </div>
+                <ul>
+                    <li><button></button></li>
+                    <li><button></button></li>
+                    <li><button></button></li>
+                </ul>
+            </section>
+        </section>
     </main>
+    <aside>
+        <section>
+            <h2>Zoek je meer verhalen?</h2>
+            <button><a href="index.html#top">Vind je verhaal met filteren</a></button>
+        </section>
+        <section>
+            <h3>Neem contact op</h3>
+            <p><b>0900 - 525 2241</b></p>
+            <p>Openingstijden: maandag t/m vrijdag 8:00 uur tot 20:00 uur. Voor dit informatienummer betaal je je gebruikelijke belkosten. </p>
+        </section>
+    </aside>
     <footer>
-        <p>© 2018 Verhalenwebsite door Roy Csuka</p>
+        <section>
+            <div>
+                <a href="index.html">
+                    <img src="img/logo-uov.svg" alt="logo">
+                </a>
+                <a href="facebook.com" target="_blank">
+                    <img src="img/icons/facebook-logo.svg" alt="U-OV Facebook">
+                </a>
+                <a href="twitter.com" target="_blank">
+                    <img src="img/icons/twitter-logo.svg" alt="U-OV Twitter">
+                </a>
+            </div>
+            <a href="https://www.u-ov.info/meer-qbuzz/voorwaarden" target="_blank">Voorwaarden</a>
+            <a href="https://www.u-ov.info/meer-qbuzz/disclaimer-privacy" target="_blank">Disclaimer &amp; Privacy</a>
+            <a href="https://www.u-ov.info/meer-qbuzz/cookies" target="_blank">Cookies</a>
+            <a href="http://nurksmagazine.nl/tag/stijloefeningen/" target="_blank">Verhalen van Max J. Molovich</a>
+            <a href="https://www.u-ov.info/" target="_blank">U-OV Website</a>
+        </section>
     </footer>
     <script type="text/javascript" src="js/progress.js"></script>
 </body>
